fixed layout problems #5 added classlistview: header and button (incl. styling) #13

--- a/src/components/Page/Page.css
+++ b/src/components/Page/Page.css
@@ -1,5 +1,13 @@
 .content {
-    padding-left: 35px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+@media only screen and (max-width: 600px) {
+    .content {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
 
 .spacey {
